--- a/public/404.html
+++ b/public/404.html
@@ -131,6 +131,11 @@
                     </svg>
                 </a>
             </li>
+            <li>
+                <a href="http://localhost:1313/b1/tags/" title="tags">
+                    <span>tags</span>
+                </a>
+            </li>
         </ul>
     </nav>
 </header>
